--- a/nzbget.conf
+++ b/nzbget.conf
@@ -58,6 +58,15 @@ LockFile=/tmp/nzbget.lock
 # NOTE: See also option <CreateLog>.
 LogFile=${DestDir}/nzbget.log
 
+# Directory with web-interface files.
+#
+# Example: "WebDir=/usr/local/share/nzbget/webui".
+#
+# NOTE: to disable web-interface set the option to an empty value.
+# This however doesn't disable the built-in web-server completely because
+# it is also used to serve JSON-/XML-RPC requests.
+WebDir=
+
 
 ##############################################################################
 ### NEWS-SERVERS                                                           ###
