added remote command <--reload/-O> and JSON/XML-RPC method <reload> to reload configuration from disk and reintialize the program; the reload can be performed from web-interface
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@463 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.in
+++ b/Makefile.in
@@ -280,7 +280,8 @@ webui_FILES = \
 	webui/lib/jquery.js webui/lib/jquery.min.js \
 	webui/img/extraicons.png webui/img/glyphicons-halflings.png webui/img/glyphicons-halflings-white.png \
 	webui/img/transmit.gif webui/img/transmit-file.gif webui/img/favicon.ico \
-	webui/img/download-anim-green-2x.png webui/img/download-anim-orange-2x.png
+	webui/img/download-anim-green-2x.png webui/img/download-anim-orange-2x.png \
+	webui/img/transmit-reload-2x.gif
 
 
 # Install
