updated descriptions in example configuration file
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@470 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -234,6 +234,7 @@ MergeNzb=no
 # filename cleanup, assign category and post-processing parameters to nzb-file
 # or do something else.
 #
+# INFO FOR DEVELOPERS:
 # NZBGet passes following arguments to nzbprocess-program as environment
 # variables:
 #  NZBNP_DIRECTORY - path to directory, where file is located. It is a directory
