--- a/nzbget.conf
+++ b/nzbget.conf
@@ -534,6 +534,26 @@ KeepHistory=7
 # used for this purpose, when multiple URLs were added at the same time.
 UrlConnections=4
 
+
+##############################################################################
+### CATEGORIES                                                             ###
+
+# This section defines categories available in web-interface.
+
+# Category name.
+#
+# Each nzb-file can be assigned to a category. If the option <AppendCategoryDir>
+# is active, the program creates a subdirectory with category name within
+# destination directory.
+# Category name is passed to post-processing script and can be used by it
+# to perform category specific processing.
+Category1.Name=Movies
+
+Category2.Name=Series
+Category3.Name=Music
+Category4.Name=Software
+
+
 ##############################################################################
 ### LOGGING                                                                ###
 
